--- a/finsent/Backend/Procfile
+++ b/finsent/Backend/Procfile
@@ -1,1 +1,1 @@
-web: gunicorn app:app --bind 0.0.0.0:$PORT --workers 2
+web: gunicorn app:app --bind 0.0.0.0:$PORT --workers 1 --threads 2 --timeout 90 --worker-class gthread --max-requests 100 --max-requests-jitter 10
